# pythonhtml

./: app.py  output.html  pyproject.toml
